2010-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.1

	* ChangeLog: moved from inst/
	* inst/NEWS: moved from top-level to that it gets installed with package

2010-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/*: applied patch by Koert Kuipers to support raw bytes
	* inst/unitTests/runit.bytes.R: also added unit test by Koert

2010-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.0

2010-09-10  Romain Francois <romain@r-enthusiasts.com>

	* man/readASCII.Rd: Rd documentation for readASCII

2010-08-20  Romain Francois <romain@r-enthusiasts.com>

	* R/read/.R: New readASCII method

2010-08-12  Romain Francois <romain@r-enthusiasts.com>

	* src/*: restore R CMD check

2010-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.addressbook.R: start of new unit tests

2010-07-30  Romain Francois <romain@r-enthusiasts.com>

	* src/*: correct many small errors so that the vignette builds again

2010-02-02  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: More rigorous checks for ProtoBuf headers, library,
	  mininal version as well as availability of pkg-config.

2010-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/ChangeLog: added

2010-02-01  Romain Francois <francoisromain@free.fr>

	* Release 0.1-0

	* [r274] /pkg/man/RProtoBuf-package.Rd: tidying up

	* [r273] /pkg/inst/doc/unitTests-results:

	* [r272] /pkg/inst/doc/unitTests/RProtoBuf-unitTests.R: minor
	  cleanups for the unit test vignette (same as in Rcpp)

	* [r271] /pkg/DESCRIPTION,
	  /pkg/inst/doc/unitTests/RProtoBuf-unitTests.R: OS_type: unix (for
	  now)

	* [r270] /pkg/DESCRIPTION: version bump to 0.1-0

	* [r269] /pkg/inst/doc/Makefile,
	  /pkg/inst/doc/RProtoBuf-unitTests.R[DEL],
	  /pkg/inst/doc/RProtoBuf-unitTests.Rnw, /pkg/inst/doc/unitTests,
	  /pkg/inst/doc/unitTests/RProtoBuf-unitTests.R: minor cleanups for
	  the unit test vignette (same as in Rcpp)

2010-01-23  Romain Francois <francoisromain@free.fr>
